--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,17 @@
 version: "3.9"
 
 services:
-
-  hello-world:
-    image: "traefik/whoami"
-    container_name: "simple-service"
-    restart: unless-stopped
-    networks:
-      - traefik
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.simple-service.rule=Host(`hello-world.${BASE_DOMAIN:-ozeliurs.com}`)"
-      - "traefik.http.routers.simple-service.entrypoints=websecure"
-      - "traefik.http.routers.simple-service.tls=true"
-      - "traefik.http.routers.simple-service.tls.certresolver=cloudflare"
-      - "traefik.http.services.simple-service.loadbalancer.server.port=80"
-    healthcheck:
-      test: [ "CMD", "wget", "-q", "--spider", "http://localhost:80" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
+  transfer-sh:
+      command: '--provider local --port 8080'
+      image: 'dutchcoders/transfer.sh:latest-noroot'
+      container_name: 'transfer-sh'
+      restart: unless-stopped
+      environment:
+        - BASEDIR=/data
+      volumes:
+        - transfer-sh:/data
+      networks:
+        - traefik
 
 networks:
   traefik:
