--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   transfer-sh:
-    command: '--provider local --port 8080'
+    command: '--provider local'
     image: 'dutchcoders/transfer.sh:latest-noroot'
     container_name: 'transfer-sh'
     restart: unless-stopped
@@ -18,7 +18,7 @@ services:
       - "traefik.http.routers.transfer-sh.entrypoints=websecure"
       - "traefik.http.routers.transfer-sh.tls=true"
       - "traefik.http.routers.transfer-sh.tls.certresolver=cloudflare"
-      - "traefik.http.services.transfer-sh.loadbalancer.server.port=8080"
+      - "traefik.http.services.transfer-sh.loadbalancer.server.port=80"
 
 networks:
   traefik:
